Enable aggressive JVM optimization for Dieharder tests (it makes a BIG difference).